# git

./: .gitignore  README.md  start-dev.ps1  生成apk终端日志.txt
.github/workflows/: deploy.yml
apps/admin/: index.html  package-lock.json  package.json  vite.config.js
deploy/: .env.example  build-mobile.sh  deploy-all.sh  deploy-web.sh  deploy.sh  docker-compose.dev.yml  docker-compose.yml  nginx.conf  quick-start.sh
docs/: DEPLOY.md  postman_collection.json
scripts/: dev-up.ps1  migrate.ps1  overdue-scanner.ps1  overdue-scanner.sh  validate-stage1.ps1
services/api/: Dockerfile  pyproject.toml  seed_devices.py  test_stage1.py
services/api/alembic/: env.py
services/api/alembic/versions/: 001_initial_schema.py  002_add_deposit_and_free_hours.py  003_change_free_hours_to_minutes.py  003_rename_overdue_fee_to_usage_fee.py  004_add_student_fields.py  005_add_fault_tickets.py
services/api/app/: config.py  dependencies.py  main.py
services/api/app/api/v1/: __init__.py  admin.py  auth.py  borrows.py  devices.py  faults.py  health.py  users.py
services/api/app/core/: decimal_utils.py  exceptions.py  json_encoder.py  lock.py  redis.py
services/api/app/db/: base.py  session.py
services/api/app/db/models/: __init__.py  borrow_order.py  deposit_ledger.py  device.py  fault_ticket.py  user.py
services/api/app/schemas/: admin_user.py  auth.py  borrow.py  deposit.py  device.py  fault.py  health.py  statistics.py  user.py
services/api/app/services/: auth.py  borrows.py  deposits.py  devices.py  faults.py  statistics.py
services/api/app/tasks/: overdue_scanner.py
(+67 files in other folders)
