[project]
name = "campus-device-api"
version = "0.1.0"
description = "校园共享设备扫码借还 API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "pymysql>=1.1.0",
    "redis>=5.2.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "qrcode[pil]>=7.4.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
